# godot-buddy

./: .env  .gitignore  .prettierignore  README.md  bun.lockb  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  i18n.ts  main.tsx  store.ts  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  downloads.rs  main.rs  models.rs  news.rs  projects.rs  settings.rs  versions.rs
src/assets/i18n/: en.json
src/components/Content/: index.tsx  styles.module.css
src/components/Engine/: index.tsx  styles.module.css
src/components/EngineStatus/: index.tsx
src/components/FileInput/: index.tsx
src/components/Header/: index.tsx  styles.module.css
src/components/Layout/: index.tsx  styles.module.css
src/components/Modals/: index.tsx
src/components/Navigation/: index.tsx  styles.module.css
src/components/NewsCard/: index.tsx  styles.module.css
src/components/NewsImage/: index.tsx
src/components/ProjectCard/: index.tsx  styles.module.css
src/components/Router/: index.tsx
src/components/SettingsInput/: FileSettingsInput.tsx  SelectSettingsInput.tsx  SwitchSettingsInput.tsx  index.tsx
src/hooks/: useDataLoader.tsx
src/middlewares/: listenerMiddleware.ts  loggerMiddleware.ts
src/modals/AddProject/: index.tsx
src/modals/InstallEngine/: index.tsx
src/modals/NewProject/: index.tsx
src/slices/: downloadSlice.ts  modalSlice.ts  projectSlice.ts  routerSlice.ts  settingSlice.ts  versionSlice.ts
src/utils/: file.ts  versions.ts
(+10 files in other folders)
